# Open-AutoGLM

./: .env.example  .gitignore  .pre-commit-config.yaml  .venv  ASYNC_GUIDE.md  BEST_PRACTICES.md  CHANGELOG.md  CHANGELOG_OPTIMIZATION.md  CLI_USAGE.md  CONTRIBUTING.md  CONTRIBUTION_SUMMARY.md  FIXES_SUMMARY.md  GGUF_SETUP.md  IOS_AGENT_INTEGRATION.md  IOS_CLI_GUIDE.md  LICENSE  OPTIMIZATION_COMPLETION.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PR_CONTENT.md  QUICK_START_OPTIMIZATION.md  README.md  README_UPDATE.md  README_coding_agent.md  README_en.md  README_ja.md  README_zh.md  REMOTE_SETUP.md  WDA_SESSION_FIX.md  WEBDRIVER_W3C_MIGRATION.md  build.gradle.kts  check_history_api.py  client_switch_demo.py  command.txt  config.example.json  depoly_notes.md  iOS_README.md  iOS_SETUP_GUIDE.md  iOS_SUPPORT.md  (+26 more)
.claude/: settings.local.json
.github/: .markdownlint.json  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
android-app/: README.md  build_out.txt  build_output.txt  install_app.bat  local.properties  settings.gradle.kts
docs/: android_setup.md  development.md  environment.md  installation.md  ios_setup.md  remote_control.md
examples/: async_usage.py  basic_usage.py  batch_results.txt  batch_task_execution.py  demo_thinking.py  ios_agent_usage.py  ios_basic_usage.py  optimization_features.py  simple_AutoGLM.py
exe-app/: README.md  RELEASE.md  autoglm.spec  build.py  launcher.py
frontend/: package-lock.json  tailwind.config.js
gradle/: libs.versions.toml
mcp_server/: __init__.py  phone_mcp.py
phone_agent/: __init__.py  (+11 more)
(+168 files in other folders)
